--- a/style/textfield.css
+++ b/style/textfield.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: row;
 }
-.row{
+.cell{
     border: 1px solid black;
     background-color: gray;
+    width: 50px;
+    height: 50px;
+    /* margin: 1px; */
 }
